/
P/oject name: UKM-unified
19/02/2017

  * device: fix cpu temp status and remove Farenheits - we going to use Imperial only (Slawek) [b644623]
  * restorebackup: use gamma values from ak kernel (Slawek) [0faa6e7]



18/02/2017

  * small update (Slawek) [15414fa]
  * hotplug: alucard: list frequencies from cpu0 (Slawek) [17514bf]
  * gamma: fix backlight dimmer (Slawek) [5ef2722]
  * advanced: remove spacer (Slawek) [981de6c]
  * gamma: add variable for emulated sd cards (Slawek) [ecdf513]
  * kryo.io: add kryo action for io (Slawek) [9fde354]
  * kryo I/O: correct paths for i/o sheduler (Slawek) [020c208]
  * kryo2: correct toggle paths (Slawek) [dd273ff]
  * kryo1: correct toggle paths (Slawek) [edb9390]
  * cpu2: correct paths for tunables (Slawek) [98d26ac]
  * cpu1: correct paths for tunables (Slawek) [4bb57a1]
  * boost: universal cpu freq list (Slawek) [f0c227e]
  * sound: add flars sound controls for WDC9335 (Slawek) [f3f9bfb]
  * misc: add charge levels , remove version string from powersuspend, move fsync (Slawek) [eb3a0b5]
  * mem: Dirty Expire and writeback Centisecs (Slawek) [98adb7b]
  * I/O: add kryo variable (Slawek) [14baaa6]
  * hotplug: organise and add support for hima and thunderplug (Slawek) [ec1113f]
  * gpu: add finish quote and fix gpuset for kryo (Slawek) [c46e057]
  * i am retarded (Slawek) [527a7a3]
  * gpu: add gpuboost action, adreno530 gpu tunables and adreno boost (Slawek) [52be22f]
  * gamma: add gamma from AK kernel icluding profiles (Slawek) [5b6e603]
  * error: update version and UKM fix button from AK kernel (Slawek) [e70cf00]
  * generate: conditionally create volt controll (Slawek) [fa4a76f]
  * advanced: remove gentle fair sleepers & addvarious functions (Slawek) [16d0b8d]
  * actions: live add missing functions (Slawek) [afcf369]
  * Info: up to 3.8.2 Unified version (Slawek) [094586a]
  * Cpu Boost splitted from cpu added basic support for little.big clusters (Slawek) [d743e14]