@@ -25,7 +25,7 @@ cat << CTAG
 					$BB echo '{ SSeekBar:{
 						title:"CPU Min Scaling Frequency",
 						description:"Set the minimum frequency the CPU scales down to.",
-						default:'\`sh $DEVICE DefaultCPUMinFrequency\`',
+						default:'\`sh $DEVICE DefaultCPU1MinFrequency\`',
 						action:"cpuset '\`sh $DEVICE DirCPU1MinFrequency\`'",
 						values:{'
 							sh $DEVICE CPU1FrequencyList
@@ -34,7 +34,7 @@ cat << CTAG
 					$BB echo '{ SSeekBar:{
 						title:"CPU Max Scaling Frequency",
 						description:"Set the maximum frequency the CPU scales up to.",
-						default:'\`sh $DEVICE DefaultCPUMaxFrequency\`',
+						default:'\`sh $DEVICE DefaultCPU1MaxFrequency\`',
 						action:"cpuset '\`sh $DEVICE DirCPU1MaxFrequency\`'",
 						values:{'
 							sh $DEVICE CPU1FrequencyList
