@@ -25,19 +25,19 @@ cat << CTAG
 					$BB echo '{ SSeekBar:{
 						title:"CPU2 Min Scaling Frequency",
 						description:"Set the minimum frequency the CPU scales down to.",
-						default:'\`sh $DEVICE  DefaultCPU1MinFrequency\`',
+						default:'\`sh $DEVICE  DefaultCPU2MinFrequency\`',
 						action:"cpuset '\`sh $DEVICE DirCPU2MinFrequency\`'",
 						values:{'
-							sh $DEVICE CPU1FrequencyList
+							sh $DEVICE CPU2FrequencyList
 						$BB echo }'
 					}},'
 					$BB echo '{ SSeekBar:{
 						title:"CPU2 Max Scaling Frequency",
 						description:"Set the maximum frequency the CPU scales up to.",
-						default:'\`sh $DEVICE DefaultCPU1MaxFrequency\`',
+						default:'\`sh $DEVICE DefaultCPU2MaxFrequency\`',
 						action:"cpuset '\`sh $DEVICE DirCPU2MaxFrequency\`'",
 						values:{'
-							sh $DEVICE CPU1FrequencyList
+							sh $DEVICE CPU2FrequencyList
 						$BB echo }'
 					}},'
 				fi`
